menu overflow fix

--- a/src/applications/main/components/menu/menu.pcss
+++ b/src/applications/main/components/menu/menu.pcss
@@ -7,14 +7,14 @@
   &__tile-panel {
     overflow: hidden;
     width: 100%;
-    height: 70%;
+    height: 100%;
     align-items: center;
   }
 
   &__tile {
     justify-content: flex-end;
 
-    height: 90%;
+    height: 17vh;
     width: 25vh;
     margin: 0 10px;
 
